--- a/work/2024_04_27_bob_moses/2024_04_27_bob_moses.tex
+++ b/work/2024_04_27_bob_moses/2024_04_27_bob_moses.tex
@@ -139,7 +139,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Data Wells: Race and State Violence in the United States from 1892},
+  pdftitle={The Principles of Reconstruction: Still a Viable Route to Full Citizenship},
   pdfauthor={Nathan Alexander; Kade Davis; Basil Ghali; Qyana Stewart; Gabriella La Cour},
   colorlinks=true,
   linkcolor={blue},
@@ -148,8 +148,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Data Wells: Race and State Violence in the United States from
-1892}
+\title{The Principles of Reconstruction: Still a Viable Route to Full
+Citizenship}
 \usepackage{etoolbox}
 \makeatletter
 \providecommand{\subtitle}[1]{% add subtitle to \maketitle
@@ -163,7 +163,7 @@ Stewart \and Gabriella La Cour}
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[sharp corners, boxrule=0pt, frame hidden, interior hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, breakable, enhanced, boxrule=0pt, interior hidden, frame hidden, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -171,9 +171,12 @@ Stewart \and Gabriella La Cour}
 \setcounter{tocdepth}{3}
 \tableofcontents
 }
-\hypertarget{data-ida-b.-wells-barnett}{%
-\subsection{\texorpdfstring{{\emph{Data}} + Ida B.
-{\emph{Wells}}-Barnett}{Data + Ida B. Wells-Barnett}}\label{data-ida-b.-wells-barnett}}
+\hypertarget{the-principles-of-reconstruction-still-a-viable-route-to-full-citizenship}{%
+\subsection{The Principles of Reconstruction: Still a Viable Route to
+Full
+Citizenship}\label{the-principles-of-reconstruction-still-a-viable-route-to-full-citizenship}}
+
+A focus on ``Data Wells'': {\emph{Data}} + Ida B. {\emph{Wells}}-Barnett
 
 \begin{itemize}
 \item
@@ -322,7 +325,7 @@ quick loading and analysis, it does require some data wrangling.
 
 Content for 1893
 
-\subsubsection{1893 map}
+\includegraphics{.pdf}
 
 \subsubsection{1894}
 
@@ -340,8 +343,30 @@ Content for 1895
 Pollock deals with the issue of erasure in their development of the
 data.
 
-\hypertarget{policing}{%
-\subsection{Policing}\label{policing}}
+\hypertarget{section-3}{%
+\subsection{}\label{section-3}}
+
+Sandra Bland, killed by police in 2015, Texas
+
+\hypertarget{section-4}{%
+\subsection{}\label{section-4}}
+
+Breonna Taylor, killed by police in 2020, Louisville
+
+\hypertarget{section-5}{%
+\subsection{}\label{section-5}}
+
+Rayshard Brooks, killed by police in 2020, Atlanta
+
+\hypertarget{section-6}{%
+\subsection{}\label{section-6}}
+
+Rayshard Brooks, killed by police in 2020, Atlanta
+
+\hypertarget{section-7}{%
+\subsection{}\label{section-7}}
+
+George Floyd, killed by police on May 25, 2020, Minneapolis
 
 \hypertarget{fatal-police-interactions}{%
 \subsection{Fatal police interactions}\label{fatal-police-interactions}}
@@ -361,9 +386,6 @@ data.
 
 \hypertarget{campus-policing-timeline}{%
 \subsection{Campus Policing Timeline}\label{campus-policing-timeline}}
-
-\hypertarget{racism}{%
-\subsection{Racism}\label{racism}}
 
 \hypertarget{prisons}{%
 \subsection{Prisons}\label{prisons}}
@@ -393,7 +415,7 @@ state prison populations\footnote{Source of data:
   (2022). Prisoners in 2021 -- Statistical tables. Bureau of Justice
   Statistics.}}.
 
-\includegraphics{2024_04_27_bob_moses_files/figure-pdf/unnamed-chunk-9-1.pdf}
+\includegraphics{2024_04_27_bob_moses_files/figure-pdf/unnamed-chunk-8-1.pdf}
 
 \hypertarget{prisons-2}{%
 \subsection{Prisons}\label{prisons-2}}
@@ -410,6 +432,30 @@ Content for state
 
 Content for federal and state
 
+\hypertarget{racism-vs.-anti-blackness}{%
+\subsection{Racism vs.~Anti-Blackness}\label{racism-vs.-anti-blackness}}
+
+In a 2020 New York Times article, kihana miraya ross chronicles the
+histories and contemporary realities of anti-Blackness.
+\href{https://www.nytimes.com/2020/06/04/opinion/george-floyd-anti-blackness.html}{ross
+(2020)} deals with the related but differing functions of racism and
+anti-Blackness.
+
+\begin{itemize}
+\item
+  ross notes that ``\,`racism' fails to fully capture what black people
+  in this country are facing.''
+\item
+  ross continues by noting that ``Anti-blackness is one way some black
+  scholars have articulated what it means to be marked as black in an
+  anti-black world.''
+\item
+  Broadly, ross defines anti-Blackness as society's inability to
+  recognize Black people's humanity.
+\end{itemize}
+
+. . .
+
 \hypertarget{thank-you}{%
 \section{Thank you}\label{thank-you}}
 
@@ -418,8 +464,8 @@ Content for federal and state
 Thank you for joining us and citing today's presentation.
 
 Alexander, N., Davis, K., Ghali, B., Stewart, K., \& La Cour, G. (2024,
-April 26). Data Wells: Race and State Violence in the United States from
-1892. \emph{The 2024 Bob Moses Conference}.
+April 26). The Principles of Reconstruction: Still a Viable Route to
+Full Citizenship. \emph{The 2024 Bob Moses Conference}.
 \href{https://www.bobmosesconference.com/}{Online}.
 
 
