--- a/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
+++ b/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
@@ -328,7 +328,7 @@ Content for federal and state
 
 ## Racism vs. Anti-Blackness {background-image="https://upload.wikimedia.org/wikipedia/commons/c/c6/Blackboard.png?20200731124623" background-opacity=0.5}
 
-In a 2020 New York Times article, kihana miraya ross chronicles the contemporary realities of anti-Blackness. [ross (2020)](https://www.nytimes.com/2020/06/04/opinion/george-floyd-anti-blackness.html) deals with the related but differing functions of racism and anti-Blackness.
+In a 2020 NY Times article, kihana miraya ross chronicles the realities of anti-Blackness. [ross (2020)](https://www.nytimes.com/2020/06/04/opinion/george-floyd-anti-blackness.html) deals with the related but differing functions of racism and anti-Blackness.
 
 ::: {.incremental}
 
