--- a/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
+++ b/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
@@ -53,9 +53,19 @@ format:
     theme: default
 ---
 
-## The Principles of Reconstruction: Still a Viable Route to Full Citizenship 
+## Principles of Reconstruction
 
-A focus on "Data Wells": [*Data*]{style="color:darkgreen;"} + Ida B. [*Wells*]{style="color:darkgreen;"}-Barnett
+::: {.incremental}
+
+  - Du Bois' (1935) [Black Reconstruction: An Essay Toward a History of the Part which Black Folk Played in the Attempt to Reconstruct Democracy in America, 1860-1880](https://www.loa.org/books/698-black-reconstruction/) offers an alternative assessment of the post-Civil War period in the United States.
+  
+  - Democracy provided a new narrative at the time to examine African American progress post enslavement, and it continued to challenge long-standing narratives about racial hierarchy.
+  
+  - Recently, notable scholars, such as Gloria Ladson-Billings, return to the importance of narratives of *democracy* in relation to the promise and perils of education and society broadly, while also highlighting the limits of liberalism.
+  
+:::
+
+## A focus on "Data Wells": [*Data*]{style="color:darkgreen;"} + Ida B. [*Wells*]{style="color:darkgreen;"}-Barnett
 
 ::: {.incremental}
 
@@ -112,6 +122,16 @@ library(sf)
 library(patchwork)
 install.packages("geojsonio", repos = "http://cran.us.r-project.org")
 library(geojsonio)
+
+
+# load packages and libraries
+library(readr)
+library(ggplot2)
+library(dplyr)
+install.packages("patchwork", repos = "http://cran.us.r-project.org") # To display 2 charts together
+library(patchwork)
+install.packages("plotly", repos = "http://cran.us.r-project.org")
+library(plotly)
 ```
 
 ## Quantitative history
@@ -194,7 +214,6 @@ map1893 <- geojson_read("https://raw.githubusercontent.com/professornaite/red-re
 #| output: true
 #| warning: false
 
-
 ```
 
 ### 1894
@@ -254,7 +273,7 @@ Rayshard Brooks, killed by police in 2020, Atlanta
 
 George Floyd, killed by police in 2020, Minneapolis
 
-## Fatal interactions
+## Fatal police interactions
 
 [Alicia Chugtai (2020)](https://interactive.aljazeera.com/aje/2020/know-their-names/index.html) developed an interactive site, **Know their names**, that chronicles Black people killed by police in the United States.
 
@@ -313,23 +332,146 @@ ggplot(prison_rates_ethnicity, aes(race, rate)) +
   theme(panel.background = element_blank())
 
 ```
-[^carson]: Source of data: [Carson (2022). Prisoners in 2021 – Statistical tables. Bureau of Justice Statistics.](https://bjs.ojp.gov/library/publications/prisoners-2021-statistical-tables)
+[^carson]: Source: [Carson (2022). Prisoners in 2021 – Statistical tables. Bureau of Justice Statistics.](https://bjs.ojp.gov/library/publications/prisoners-2021-statistical-tables)
 
 ## Prisons
+
+To support our framing of contemporary data, we take on an historical view.
+
+```{r}
+#| echo: false
+#| output: false
+#| warning: false
+# read in data and update
+df <- read_csv("https://raw.githubusercontent.com/professornaite/prisons/main/data/fed_state_prison_pop_1926_1986_clean.csv")
+
+
+df %>% 
+  rename(Count = `Total`,
+         TotalPct = `Total Percentage`,
+         Type = `Prison Type`,
+         WhitePct = `White Percentage`,
+         BlackPct = `Black Percentage`) %>% 
+  relocate(Year, Type) -> df
+
+# subset data
+df_state = df %>% filter(Type == "State")
+df_state <- df_state %>% 
+  mutate(date = as.Date(Year, format = "%Y-%m-%d"))
+
+df_federal = df %>% filter(Type == "Federal")
+df_federal <- df_federal %>% 
+  mutate(date = as.Date(Year, format = "%Y-%m-%d"))
+
+df_both = df %>% filter(Type == "State + Federal")
+df_both <- df_both %>% 
+  mutate(date = as.Date(Year, format = "%Y-%m-%d"))
+
+```
 
 ::: {.panel-tabset}
 
 ### Federal
 
-Content for federal
+Federal racialization data
+
+```{r}
+#| echo: false
+#| output: false
+#| warning: false
+f1 <- ggplot(df_state, aes(x=date, y=WhitePct)) +
+  geom_line(color="lightblue", size=2) +
+  ggtitle("US Federal Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as White") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+
+f2 <- ggplot(df_state, aes(x=date, y=BlackPct)) +
+  geom_line(color="red",size=2) +
+  ggtitle("US Federal Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as Black") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+```
+
+```{r}
+#| echo: false
+#| output: true
+#| warning: false
+f1 + f2
+```
+
+
 
 ### State
 
-Content for state
+State racialization data
+
+```{r}
+#| echo: false
+#| output: false
+#| warning: false
+
+s1 <- ggplot(df_federal, aes(x=date, y=WhitePct)) +
+  geom_line(color="lightblue", size=2) +
+  ggtitle("US State Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as White") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+
+s2 <- ggplot(df_federal, aes(x=date, y=BlackPct)) +
+  geom_line(color="red",size=2) +
+  ggtitle("US State Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as Black") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+
+```
+
+```{r}
+#| echo: false
+#| output: true
+#| warning: false
+s1 + s2
+
+```
 
 ### Federal and State
 
-Content for federal and state
+Federal and State racialization data
+
+```{r}
+#| echo: false
+#| output: false
+#| warning: false
+
+b1 <- ggplot(df_both, aes(x=date, y=WhitePct)) +
+  geom_line(color="lightblue", size=2) +
+  ggtitle("State and Federal Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as White") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+
+b2 <- ggplot(df_both, aes(x=date, y=BlackPct)) +
+  geom_line(color="red",size=2) +
+  ggtitle("State and Federal Prison Racialization (1926 - 1986)") +
+  ylab("% Racialized as Black") +
+  xlab("Year") + 
+  ylim(1,100) +
+  geom_line()
+```
+
+```{r}
+#| echo: false
+#| output: true
+#| warning: false
+b1 + b2
+```
 
 :::
 
