--- a/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
+++ b/work/2024_04_27_bob_moses/2024_04_27_bob_moses.qmd
@@ -1,5 +1,5 @@
 ---
-title: "The Principles of Reconstruction: Still a Viable Route to Full Citizenship"
+title: "Data Wells: Race and State Violence in the United States from 1892"
 subtitle: "Quantitative Histories Workshop"
 author:
   - name: Nathan Alexander
@@ -53,18 +53,6 @@ format:
     theme: default
 ---
 
-## Principles of Reconstruction
-
-::: {.incremental}
-
-  - Du Bois' (1935) [Black Reconstruction: An Essay Toward a History of the Part which Black Folk Played in the Attempt to Reconstruct Democracy in America, 1860-1880](https://www.loa.org/books/698-black-reconstruction/) offers an alternative assessment of the post-Civil War period in the United States.
-  
-  - Democracy provided a new narrative at the time to examine African American progress post enslavement, and it continued to challenge long-standing narratives about racial hierarchy.
-  
-  - Recently, notable scholars, such as Gloria Ladson-Billings, return to the importance of narratives of *democracy* in relation to the promise and perils of education and society broadly, while also highlighting the limits of liberalism.
-  
-:::
-
 ## A focus on "Data Wells": [*Data*]{style="color:darkgreen;"} + Ida B. [*Wells*]{style="color:darkgreen;"}-Barnett
 
 ::: {.incremental}
@@ -86,6 +74,22 @@ format:
   - We describe "Data Wells" of U.S. state violence using quantitative history as a frame.
 
 :::
+
+## On the Principles of Reconstruction
+
+::: {.incremental}
+
+  - Du Bois' (1935) [Black Reconstruction: An Essay Toward a History of the Part which Black Folk Played in the Attempt to Reconstruct Democracy in America, 1860-1880](https://www.loa.org/books/698-black-reconstruction/) offers an alternative assessment of the post-Civil War period in the United States.
+  
+  - Democracy provided a new narrative at the time to examine African American progress post enslavement, and it continued to challenge long-standing narratives about racial hierarchy.
+  
+  - Recently, notable scholars, such as Gloria Ladson-Billings, return to the importance of narratives of *democracy* in relation to the promise and perils of education and society broadly, while also highlighting the limits of liberalism.
+  
+:::
+
+## Ida B. Wells and Reconstruction
+
+{{< video https://youtu.be/wYjKHLZllSQ width="100%" height="85%" >}}
 
 # Quantitative Histories Workshop {background-color="lightgrey"}
 
@@ -164,31 +168,30 @@ Today, we will discuss race and racialization in *data wells* of state sponsored
 
 . . .
 
-  - Lynching 
+  - Lynching. Framing historical incidents and conceptualizing the contemporary formations of lynching.
 
 . . .
 
-  - Policing
+  - Policing. Understanding the role of policing in relation to both lynching and prisons.
 
 . . .
 
-  - Prisons
-
-## Ida B. Wells-Barnett on lynching
-
-  - **Personal experience**. In 1892, a close friend of Ida B. Wells-Barnett was lynched. Wells-Barnett, a known activist, community organizer, and journalist, would generate quantitative indicators of lynching as state violence.
-
-. . .
-
-  - **Intuition and method**. Like many Black communities at the time and other allies, Wells-Barnett acknowledged both the personal (micro) social forces of racism and the systemic (macro) nature of white racial violence. In this case, this violence was expressed through the practice of lynching.
-
-. . .
-
-  - **Impact**. Wells-Barnett's databases, and the use of number and quantification have a profound impact on the current view of state-sponsored racial violence.
+  - Prisons. Identifying narratives around prison populations and racialization.
 
 ## Lynching
 
-Caitlin Pollock has created [software](https://redrecord.cmjpollock.com/) based on a series of extracted data from Wells-Barnett's work. Although the data provides for quick loading and analysis, it does require some data wrangling.
+Caitlin Pollock developed [maps](https://redrecord.cmjpollock.com/) using data extracted from Wells-Barnett's work. Although the data provides for quick loading and analysis, it does require some data wrangling and other questions remain. We build on this data to examine the social implications of cartography and map making.
+
+
+```{r}
+#| echo: false
+#| output: false
+#| warning: false
+
+df1893 <- read.csv("https://raw.githubusercontent.com/quant-shop/IdaBWellsProject/master/RedRecord/redrecord1893.csv")
+df1894 <- read.csv("https://raw.githubusercontent.com/quant-shop/IdaBWellsProject/master/RedRecord/redrecord1894.csv")
+df1895 <- read.csv("https://github.com/quant-shop/IdaBWellsProject/blob/master/RedRecord/redrecord1894.geojson.txt")
+```
 
 ::: {.panel-tabset}
 
@@ -196,24 +199,11 @@ Caitlin Pollock has created [software](https://redrecord.cmjpollock.com/) based 
 
 Content for 1893
 
-![]()
-
-```{r}
-#| echo: false
-#| output: false
-#| warning: false
-library(geojsonio)
-library(broom)
-library(ggplot2)
-map1893 <- geojson_read("https://raw.githubusercontent.com/professornaite/red-record/main/data/1893map.geojson")
-```
-
-
 ```{r}
 #| echo: false
 #| output: true
 #| warning: false
-
+df1893
 ```
 
 ### 1894
@@ -224,7 +214,7 @@ Content for 1894
 #| echo: false
 #| output: true
 #| warning: false
-
+df1894
 ```
 
 ### 1895
@@ -233,25 +223,14 @@ Content for 1895
 
 ```{r}
 #| echo: false
-#| output: false
-#| warning: false
-
-```
-
-```{r}
-#| echo: false
 #| output: true
 #| warning: false
-
+df1895
 ```
 
 :::
 
 ---
-
-## Concerns
-
-Pollock deals with the issue of erasure in their development of the data.
 
 ## {background-image="https://www.bostonreview.net/wp-content/uploads/2022/10/Nathan-Waller-feature-1.jpg" background-opacity=0.5}
 
@@ -260,10 +239,6 @@ Sandra Bland, killed by police in 2015, Texas
 ## {background-image="https://media.cnn.com/api/v1/images/stellar/prod/200709194059-09-week-in-photos-0710.jpg?q=w_1480,c_fill" background-opacity=0.5}
 
 Breonna Taylor, killed by police in 2020, Louisville
-
-## {background-image="https://media.cnn.com/api/v1/images/stellar/prod/200615134817-atlanta-wendys-fire-0613.jpg?q=w_1576,c_fill" background-opacity=0.5}
-
-Rayshard Brooks, killed by police in 2020, Atlanta
 
 ## {background-image="https://media.cnn.com/api/v1/images/stellar/prod/200613193913-16-protests-0613-atlanta.jpg?q=w_1576,c_fill" background-opacity=0.5}
 
@@ -281,10 +256,58 @@ George Floyd, killed by police in 2020, Minneapolis
 <iframe width="1540" height="1000" src="https://interactive.aljazeera.com/aje/2020/know-their-names/index.html" title="Know their names" data-external="1"></iframe>
 ```
 
+## Histories of police violence
+
+  - Ku Klux Klan origin and membership
+  
+  - *American Policing: Protect Private Property, Not People*, by David Todd
+  
+  - Cop Cities (see, Atlanta) and the militarization of local police
+
+## Media Framing
+
+In *Race and Police Brutality: The Importance of Media Framing* (Fridkin, 2017) the authors discuss how media framing can affect the audience's perception of situations. Here, we disucss racialization.
+
+::: {.incremental}
+
+  - [Emphasis frames]{style="color:red;"}
+  
+    - Black Americans make up 40 percent of the prison population.
+    
+    - History: "War on Crime," "War on Drugs," Jim Crow
+    
+  - [Equivalency frames]{style="color:red;"}
+  
+    - Black Americans make up a lower percdentage of police fatalities than white people
+    
+    - Black Americans make up 40 percent of police fatalities and 14 percent of the population.
+  
+:::
+
 ## Anlayzing policing data
 
-  - Since 2015, the Washington Post has collected data on fatal police interactions in the United States.
+::: {.incremental}
+
+  - Since 2015, the Washington Post has collected [data on fatal police interactions](https://www.washingtonpost.com/graphics/investigations/police-shootings-database/) in the United States. This effort has proven to be one useful tool for our historical analysis.
   
+  - We expanded the fatal police shootings database by adding new variables and flags (e.g., confederate state, population) to help assess interrelations among and between variables.
+
+  - Our analyses have resulted in a host of questions in relation to the presence of state violence.
+  
+:::
+
+. . .
+
+|  | Fatal | Employment | Confederate |
+|:---|:---:|:---:|:---:|
+| Fatal    | 1    |    |    |
+| Employment     | .807*    | 1    |     |
+| Confederate    | .239**     | .359*    | 1    |
+
+: Sample correlations in Fatal Force database (n = 448)[^cor] {.striped .hover}
+
+[^cor]: **Correlation is significant at the 0.01 level
+
 ## Modeling fatal police interactions in the U.S.
 
 ![Faculty and student research poster](poster3.png)
@@ -302,6 +325,47 @@ George Floyd, killed by police in 2020, Minneapolis
   - "One in five Black men born in 2001 is likely to experience imprisonment within their lifetime, a decline from one in three for those born in 1981. Pushback from policymakers threatens further progress in reducing racial inequity in incarceration." ([The Sentencing Project](https://www.sentencingproject.org/reports/one-in-five-ending-racial-inequity-in-incarceration/), 2023)
 
 :::
+
+## Policing on college campuses
+
+![Timeline of campus policing](campus-policing-timeline.jpg){width=25%}
+
+## Policing on college campuses
+
+::: {.incremental}
+
+  - Background
+  
+    - First recorded instance of police officers on Yale University’s campus in 1894
+    
+    - An overwhelming 95% of college campuses employ campus police officers (Davis, 2023)
+
+    - Black student voices continue to elevate issues with campus policing (Davis, 2023)
+
+  - Policing of Black bodies
+  
+    - The history of institutionalized punishment and the legitimization of force against Black bodies is ingrained in the fabric of American history (Hattery & Smith, 2017).
+    
+    - Case Law: 1938 - *Missouri ex rel.--Gaines vs. Canada* (Ware, 2008); 1983 - *Boyle v. Torres* (Warner, Norcross, & Judd, 2015)
+    
+    - Mental health challenges
+    
+  - Safety through legislation?
+  
+    - Clergy Act of 1990
+    
+    - 2020 - 119 Bills introduced across 33 states addresing campus safety (Villalobos, 2020)
+    
+    - Mounting state and local legislation authorizing firearms on college campuses.
+    
+    - Need for consensus on protection versus imperilment
+
+:::
+
+## Policing on college campuses
+
+![Weapons authorized for use by campus law enforcement agencies](ypd-weapons.png)
+
 
 ## Prisons
 
@@ -494,7 +558,41 @@ In a 2020 NY Times article, kihana miraya ross chronicles the realities of anti-
 
 :::
 
-. . .
+## Exploration of journal articles and citations related racism
+
+Topic modeling research approach in STEM education journals
+
+  - Bibliometric analysis: who is citing who? who is discussing what?
+  
+  - Topic modeling: what are different networks discussing? and how?
+
+## Exploration of journal articles and citations related to racism
+
+Topic modeling research approach in STEM education journals
+
+  - What are the historical trends and patterns in the research on racism as reflected in journal articles? 
+  
+![Quanteda topic modeling framework by Benoit et al. (2018) ](quanteda.png){width=50%}
+
+## Hypothesis 1: Peaks in research occur within some key historical interval $(t_1, t_2)$.
+
+![Publications and citations related to racism in STEM education](report.png)
+
+## Hypothesis 2: These intervals are lag models of broader system searches $(t_1, t_2)$.
+
+![Searches related to racism](racism-10year.jpeg)
+
+# Broad Implications
+
+  - K-12 teaching and learning
+  
+    - This also exposes students to a diversity of problems and methods to solve those problems.
+
+  - Computationally-focused research and training in higher education
+  
+    - Provides an equitable pathway and entry into "high information, high density" conversations.
+    
+  - Industry and professional organizations
 
 # Gratitude for your time.
 . . .
