--- a/manual.qmd
+++ b/manual.qmd
@@ -1,12 +1,24 @@
 ---
-title: "Lab Manual"
+title: "lab manual"
+page-layout: full
 ---
+
+<script>
+  // Prompt for password when the page is loaded
+  document.addEventListener("DOMContentLoaded", function () {
+    const correctPassword = "howard1867"; // Replace with your desired password
+    let userPassword = prompt("Please enter the password to access this page:");
+
+    if (userPassword !== correctPassword) {
+      alert("Incorrect password! You will be redirected.");
+      window.location.href = "/"; // Redirect to another page (e.g., homepage)
+    }
+  });
+</script>
 
 This area is for lab members only.
 
-If you are interested in our work, join us by clicking [here]().
-
-#### Welcome new members!
+#### Welcome members!
 
 We are excited to have you join the Quantitative Histories Workshop! This section contains links to the required on-boarding documents that you will need to complete for our lab. When completing documents with sensitive information, please do not upload or email personal details (such as your SSN). Instead, you should stop by a Faculty Director's office hours to finalize any forms. 
 
