--- a/manual.qmd
+++ b/manual.qmd
@@ -30,13 +30,13 @@ For your first task, please complete the following steps below:
 
 | <u>Step 2: Paperwork </u>
 
-- Please speak with a lab director.
+- Please email with the lab manager and your PI.
 
 | <u>Step 3: Project on-boarding </u>
 
-- Members must complete on-boarding for their project group; please see your group leader. 
+- Members must complete on-boarding for their project group; please see your TA. 
 
-- Generally, all members new to coding for our lab should start here:
+- Generally, members new to coding for our lab should start with the onboarding lessons below.
 
 ## Lessons
 
@@ -44,7 +44,7 @@ For your first task, please complete the following steps below:
 | Lesson |       Title       | Resources |
 |:------:|:------|--------|
 | [0](lessons/lesson00.html) | [Getting started](lessons/lesson00-slides.html) | |
-| [1](lessons/lesson01.html) |[Introduction to the Quantitative Histories Workshop Model](lessons/lesson01-slides.html) |  |
+| [1](lessons/lesson01.html) |[Intro to the Quantitative Histories Workshop Model](lessons/lesson01-slides.html) |  |
 | [2](lessons/lesson02.html) |[Case Study 1: Fatal Police Interactions](lessons/lesson02-slides.html) |  |
 | [3](lessons/lesson03.html) |[Case Study 2: The Red Record](lessons/lesson03-slides.html) |  |
 
