--- a/manual.qmd
+++ b/manual.qmd
@@ -5,7 +5,7 @@ page-layout: full
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const encodedPassword = "aG93YXJkMTg2Nw=="; // Base64-encoded version of "howard1867"
+    const encodedPassword = "aG93YXJkMTg2Nw=="; // Base64-encoded version
 
     function decodePassword(encoded) {
       return atob(encoded); // Decode Base64 string
